# PS2BBL-Configurator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  embed.cmake  irx.cmake
.github/workflows/: build.yml
lua_intellisense/: Graphics.lua  Pads.lua  system.lua
res/: boot.lua
scripts/: file_selector.lua  options.lua  parse.lua  ui.lua  ui_common.lua  ui_main.lua  ui_state.lua
scripts/lang/: strings_de.lua  strings_en.lua  strings_es.lua  strings_fr.lua
scripts/scenes/: arg_add_menu.lua  arg_gsm_picker.lua  arg_presets.lua  arg_profiles.lua  bbl_hotkey_args.lua  bbl_hotkey_entries.lua  bbl_hotkey_entry.lua  bbl_hotkeys.lua  bbl_irx_entries.lua  choose_save.lua  color_edit.lua  editor.lua  egsm_editor.lua  egsm_value_edit.lua  entry_args.lua  entry_cdrom_options.lua  entry_paths.lua  menu_entries.lua  menu_entry_edit.lua  path_picker.lua  text_input.lua
src/: main.cpp
src/devices/: init.cpp  mc.cpp  pad.cpp  utils.cpp  vfs.cpp
src/graphics/: atlas.cpp  calc_3d.cpp  fntsys.cpp  graphics.cpp  gsKit3d_sup.cpp  render.cpp  splash.cpp
src/include/: utf8.h
src/include/devices/: init.h  mc.h  pad.h  utils.h  vfs.h
src/include/graphics/: atlas.h  fntsys.h  graphics.h  render.h  splash.h
src/include/lua/: player.h  system.h  utils.h
src/lua/: controls.cpp  graphics.cpp  player.cpp  render.cpp  screen.cpp  system.cpp  timer.cpp  utils.cpp
tools/: build_vfs.py  lua_syntax_check.ps1  lua_syntax_check.sh
